--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,17 +2,19 @@
  spring:
 
   datasource:
-    
+ 
+    #username and password from Herku
     username: bf9579c9f6e460
     password: d3c10a1b
     hikari:
       maxLifetime: 20000
-
+      
+    #Link from Herku "us-cdbr-east-06.cleardb.net"
+    #3306 this is the port 
+    #the name of Database on herku"heroku_3112bf82f2b0437"
     url: jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_3112bf82f2b0437
-    driver-class-name: com.mysql.cj.jdbc.Driver
     
-  
-     
+    
 
   devtools:
     livereload:
